Fix inner section overflow issue of team__member

--- a/src/scss/blocks/_team.scss
+++ b/src/scss/blocks/_team.scss
@@ -11,6 +11,7 @@
   margin-left: 30px;
   margin-bottom: 30px;
   border-radius: 6px;
+  overflow: hidden;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.16);
   transition: box-shadow $transition-duration ease;
   
